# talkotify

./: .cache-313ewyodqd6isoxr2zidddeyobxi  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/talkotify/: __init__.py  __main__.py  env.py  google.py  microphone.py  spotify.py
