[project]
name = "talkotify"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "\"lemolatoon\"", email = "63438515+lemolatoon@users.noreply.github.com" }
]
dependencies = ["python-dotenv~=1.0.0", "speechrecognition~=3.10.0", "PyAudio~=0.2.13"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy~=1.4.1"]
[tool.hatch.metadata]
allow-direct-references = true
